RESOLVED FIXED195842
[iOS] Unable to close trending window on naver.com.
https://bugs.webkit.org/show_bug.cgi?id=195842
Summary [iOS] Unable to close trending window on naver.com.
alan
Reported 2019-03-15 21:08:35 PDT
Attachments
Patch (10.78 KB, patch)
2019-03-16 07:52 PDT, alan
no flags
Patch (10.87 KB, patch)
2019-03-16 12:16 PDT, alan
no flags
alan
Comment 1 2019-03-16 07:52:45 PDT
Simon Fraser (smfr)
Comment 2 2019-03-16 10:44:57 PDT
Comment on attachment 364931 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=364931&action=review > Source/WebCore/ChangeLog:7 > + This patch issues a syncthetic mouse move to the tap location after we decided to hover. syncthetic
alan
Comment 3 2019-03-16 12:16:00 PDT
WebKit Commit Bot
Comment 4 2019-03-16 12:54:23 PDT
Comment on attachment 364940 [details] Patch Clearing flags on attachment: 364940 Committed r243043: <https://trac.webkit.org/changeset/243043>
WebKit Commit Bot
Comment 5 2019-03-16 12:54:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.